Coppée — L’homme et la fortune

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -98,6 +98,7 @@
 <p class='e'><a href="../000598/index.html">Prologue d’ouverture</a></p>
 <p class='e'><a href="../000599/index.html">La bataille d’Hernani</a></p>
 <p class='e'><a href="../000600/index.html">La maison de Molière</a></p>
+<p class='e'><a href="../000603/index.html">L’homme et la fortune</a></p>
 
 </body>
 </html>
