Coppée – Severo Torelli

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -96,9 +96,12 @@
 <p class='e'><a href="../000594/index.html">Les bijoux de la délivrance</a></p>
 <p class='e'><a href="../000597/index.html">Le rendez-vous</a></p>
 <p class='e'><a href="../000598/index.html">Prologue d’ouverture</a></p>
+<p class='e'><a href="../000604/index.html">Le luthier de Crémone</a></p>
+<p class='e'><a href="../000607/index.html">Le trésor</a></p>
 <p class='e'><a href="../000599/index.html">La bataille d’Hernani</a></p>
 <p class='e'><a href="../000600/index.html">La maison de Molière</a></p>
 <p class='e'><a href="../000603/index.html">L’homme et la fortune</a></p>
+<p class='e'><a href="../000605/index.html">Severo Torelli</a></p>
 
 </body>
 </html>
