--- a/livres.publies/chamfort/oeuvres_completes_auguis/index.html
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/index.html
@@ -53,7 +53,7 @@
 <p><a href='../000451/index.html'>Précis historique des révolutions de Naples et de Sicile</a></p>
 <p><a href='../000452/index.html'>Caractères et anecdotes</a></p>
 <p><a href='../000453/index.html'>Tableaux historiques de la Révolution française</a></p>
-<p><a href='../000601/index.html'>Ébauches d’une poétique dramatique</a>
+<p><a href='../000601/index.html'>Ébauches d’une poétique dramatique</a></p>
 <p><a href='../000460/index.html'>Théâtre</a></p>
 <p><a href='../000569/index.html'>Discours sur l’influence des grands écrivains</a></p>
 <p><a href='../000570/index.html'>Des académies</a></p>
@@ -68,6 +68,7 @@
 <p><a href='../000582/index.html'>Épitres</a></p>
 <p><a href='../000602/index.html'>Odes</a></p>
 <p><a href='../000586/index.html'>Contes</a></p>
+<p><a href='../000606/index.html'>Poésies diverses</a></p>
 <p><a href='../000584/index.html'>Lettres diverses</a></p>
 <p><a href='../000580/index.html'>Deux articles</a></p>
 <p><a href='../000583/index.html'>Lettres de Mirabeau à Chamfort</a></p>
