Mac Orlan — U-713 ou les gentilshommes d’infortune

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -485,7 +485,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='7'>Mac-Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='8'>Mac-Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
 </tr>
 
@@ -509,6 +509,10 @@
 
 <tr>
 <td class='livre'><a href='livres/000518/index.html'>Petit manuel du parfait aventurier</a> *</td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000608/index.html'>U-713, ou les Gentilshommes d’infortune</a> *</td>
 </tr>
 
 
