Coppée — Les Jacobites

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -585,7 +585,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan="2">Nau, John-Antoine</td>
+<td class='auteur' rowspan="2" valign="top">Nau, John-Antoine</td>
 <td class='livre'><a href='livres/000156/index.html'>Force ennemie</a></td>
 </tr>
 
