--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -102,6 +102,7 @@
 <p class='e'><a href="../000600/index.html">La maison de Molière</a></p>
 <p class='e'><a href="../000603/index.html">L’homme et la fortune</a></p>
 <p class='e'><a href="../000605/index.html">Severo Torelli</a></p>
+<p class='e'><a href="../000609/index.html">Les Jacobites</a></p>
 
 </body>
 </html>
