Franc-Nohain — Les salles d’attente

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -363,6 +363,11 @@
 </tr>
 
 <tr>
+<td class='auteur'>Franc-Nohain</td>
+<td class='livre'><a href='livres/000610/index.html'>Les salles d’attente</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top" rowspan="3">Gilbert de Voisins, Auguste</td>
 <td class='livre'><a href='livres/000371/index.html'>La petite angoisse</a></td>
 </tr>
@@ -451,17 +456,17 @@
 </tr>
 
 <tr>
-<td class='auteur'>Lautréamont, Comte de</td>
+<td class='auteur' valign="top">Lautréamont, Comte de</td>
 <td class='livre'><a href='livres/000153/index.html'>Les chants de Maldoror</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Lessig, Lawrence</td>
+<td class='auteur' valign="top">Lessig, Lawrence</td>
 <td class='livre'><a href='livres/000093/index.html'>Free Culture</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Leyret, Henri</td>
+<td class='auteur' valign="top">Leyret, Henri</td>
 <td class='livre'><a href='livres/000407/index.html'>En plein faubourg</a></td>
 </tr>
 
