--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -100,6 +100,7 @@
 <p class='e'><a href="../000607/index.html">Le trésor</a></p>
 <p class='e'><a href="../000599/index.html">La bataille d’Hernani</a></p>
 <p class='e'><a href="../000600/index.html">La maison de Molière</a></p>
+<p class='e'><a href="../000611/index.html">Madame de Maintenon</a></p>
 <p class='e'><a href="../000603/index.html">L’homme et la fortune</a></p>
 <p class='e'><a href="../000605/index.html">Severo Torelli</a></p>
 <p class='e'><a href="../000609/index.html">Les Jacobites</a></p>
