Coppée — La guerre de cent ans

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -94,6 +94,7 @@
 <p class='e'><a href="../000592/index.html">Fais ce que dois</a></p>
 <p class='e'><a href="../000593/index.html">L’abandonnée</a></p>
 <p class='e'><a href="../000594/index.html">Les bijoux de la délivrance</a></p>
+<p class='e'><a href="../000612/index.html">La guerre de cent ans</a></p>
 <p class='e'><a href="../000597/index.html">Le rendez-vous</a></p>
 <p class='e'><a href="../000598/index.html">Prologue d’ouverture</a></p>
 <p class='e'><a href="../000604/index.html">Le luthier de Crémone</a></p>
