Derème — Le laurier du Kaiser

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -320,6 +320,11 @@
 </tr>
 
 <tr>
+<td class='auteur'>Derème, Tristan</td>
+<td class='livre'><a href='livres/000613/index.html'>Le laurier du Kaiser</a></td>
+</tr>
+
+<tr>
 <td class='auteur'>Derennes, Charles</td>
 <td class='livre'><a href='livres/000392/index.html'>L’enfant dans l’herbe</a></td>
 </tr>
