Fourest — Contes pour les satyres

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -368,6 +368,11 @@
 </tr>
 
 <tr>
+<td class='auteur'>Fourest, Georges</td>
+<td class='livre'><a href='livres/000614/index.html'>Contes pour les satyres</a></td>
+</tr>
+
+<tr>
 <td class='auteur'>Franc-Nohain</td>
 <td class='livre'><a href='livres/000610/index.html'>Les salles d’attente</a></td>
 </tr>
