--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -848,6 +848,11 @@
 </tr>
 
 <tr>
+<td class='auteur'>Toulet, Paul-Jean</td>
+<td class='livre'><a href='livres/000615/index.html'>Béhanzigue</a></td>
+</tr>
+
+<tr>
 <td class='auteur'>Trotsky, Léon</td>
 <td class='livre'><a href='livres/000293/index.html'>Où va la France ?</a></td>
 </tr>
