Régnier — Les jeux rustiques et divins

--- a/livres.publies/regnier/oeuvres/index.html
+++ b/livres.publies/regnier/oeuvres/index.html
@@ -58,6 +58,14 @@
   </tr>
 
   <tr style="vertical-align:top;">
+    <td colspan="2"><a href="../000616/index.html">Les jeux rustiques et divins</a></td>
+  </tr>
+  <tr>
+    <td/>
+    <td>Aréthuse — Les roseaux de la flûte — Inscriptions pour les treize portes de la ville — La corbeille des heures — Poèmes divers</td>
+  </tr>
+
+  <tr style="vertical-align:top;">
     <td colspan="2"><a href="../000458/index.html">Les médailles d’argile</a></td>
   </tr>
   <tr>
