Mille — Christine et lui

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -575,6 +575,11 @@
 </tr>
 
 <tr>
+<td class='auteur'>Mille, Pierre</td>
+<td class='livre'><a href='livres/000618/index.html'>Christine et lui</a></td>
+</tr>
+
+<tr>
 <td class='auteur'>Molière</td>
 <td class='livre'><a href="livres/c00016/index.html">Œuvres complètes, édition Félix Lemaistre</a></td>
 </tr>
