000619  2019-07-21    Gilbert de Voisins — Écrit en Chine

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -378,7 +378,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan="3">Gilbert de Voisins, Auguste</td>
+<td class='auteur' valign="top" rowspan="4">Gilbert de Voisins, Auguste</td>
+<td class='livre'><a href='livres/000619/index.html'>Écrit en Chine</a></td>
+</tr>
+
+<tr>
 <td class='livre'><a href='livres/000371/index.html'>La petite angoisse</a></td>
 </tr>
 
