000620  2019-07-21    Pelloutier — L’art et la révolte

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -679,6 +679,11 @@
 </tr>
 
 <tr>
+<td class='auteur'>Pelloutier, Fernand</td>
+<td class='livre'><a href='livres/000620/index.html'>L’art et la révolte</a></td>
+</tr>
+
+<tr>
 <td class='auteur'>Philippe, Charles-Louis</td>
 <td class='livre'><a href='livres/000314/index.html'>Bubu de Montparnasse</a></td>
 </tr>
