--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -37,8 +37,6 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>François Coppée</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres complètes</p><p style="padding:0; margin:0;">Lemerre, Paris, 1885-1909</p></td>
 </tr></table>
 
-<p>Cette réimpression est en cours de réalisation</p>
-
 <p>Archive de tous les volumes :
     <a href="coppee_oeuvres_completes_lemerre_epub.zip">epub</a> 
     <a href="coppee_oeuvres_completes_lemerre_mobi.zip">kindle</a>
@@ -105,6 +103,10 @@
 <p class='e'><a href="../000603/index.html">L’homme et la fortune</a></p>
 <p class='e'><a href="../000605/index.html">Severo Torelli</a></p>
 <p class='e'><a href="../000609/index.html">Les Jacobites</a></p>
+<p class='e'><a href="../000621/index.html">La Korrigane</a></p>
+<p class='e'><a href="../000622/index.html">Maître Ambros</a></p>
+<p class='e'><a href="../000623/index.html">Le Pater</a></p>
+<p class='e'><a href="../000624/index.html">Pour la couronne</a></p>
 
 </body>
 </html>
