000625  2019-07-28    Franc-Nohain – Les inattentions et les sollicitudes

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -373,7 +373,11 @@
 </tr>
 
 <tr>
-<td class='auteur'>Franc-Nohain</td>
+<td class='auteur' valign='top' rowspan='2'>Franc-Nohain</td>
+<td class='livre'><a href='livres/000625/index.html'>Les inattentions et sollicitudes</a></td>
+</tr>
+
+<tr>
 <td class='livre'><a href='livres/000610/index.html'>Les salles d’attente</a></td>
 </tr>
 
