--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -67,17 +67,17 @@
 </tr>
 
 <tr>
-<td class='auteur'>Adam, Paul</td>
+<td class='auteur' valign='top'>Adam, Paul</td>
 <td class='livre'><a href="livres/000366/index.html">Le trust</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Allais, Alphonse</td>
+<td class='auteur' valign='top'>Allais, Alphonse</td>
 <td class='livre'><a href="livres/000176/index.html">L’affaire Blaireau</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Allary, Camille</td>
+<td class='auteur' valign='top'>Allary, Camille</td>
 <td class='livre'><a href="livres/000319/index.html">Au pays des cigales</a></td>
 </tr>
 
@@ -96,12 +96,12 @@
 </tr>
 
 <tr>
-<td class='auteur'>Arène, Paul</td>
+<td class='auteur' valign='top'>Arène, Paul</td>
 <td class='livre'><a href="livres/000294/index.html">La chèvre d’or</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Arnauld, Antoine, et Lancelot, Claude</td>
+<td class='auteur' valign='top'>Arnauld, Antoine, et Lancelot, Claude</td>
 <td class='livre'><a href="livres/000391/index.html">Grammaire générale et raisonnée de Port-Royal</a></td>
 </tr>
 
@@ -135,12 +135,12 @@
 </tr>
 
 <tr>
-<td class='auteur'>Balzac, Honoré de</td>
+<td class='auteur' valign='top'>Balzac, Honoré de</td>
 <td class='livre'><a href="livres/c00001/index.html">La Comédie Humaine, édition Furne</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Barbey d’Aurevilly, Jules</td>
+<td class='auteur' valign='top'>Barbey d’Aurevilly, Jules</td>
 <td class='livre'><a href="livres/000159/index.html">Les diaboliques</a></td>
 </tr>
 
@@ -240,17 +240,17 @@
 </tr>
 
 <tr>
-<td class='auteur'>Boutmy, Eugène</td>
+<td class='auteur' valign='top'>Boutmy, Eugène</td>
 <td class='livre'><a href='livres/000066/index.html'>Dictionnaire de l’argot des typographes</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Breton, A.-T.</td>
+<td class='auteur' valign='top'>Breton, A.-T.</td>
 <td class='livre'><a href='livres/000331/index.html'>Physiologie du correcteur d’imprimerie</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Buchon, Max</td>
+<td class='auteur' valign='top'>Buchon, Max</td>
 <td class='livre'><a href='livres/000427/index.html'>Scènes franc-comtoises</a></td>
 </tr>
 
@@ -260,87 +260,87 @@
 </tr>
 
 <tr>
-<td class='auteur'>Champsaur, Félicien</td>
+<td class='auteur' valign='top'>Champsaur, Félicien</td>
 <td class='livre'><a href='livres/000290/index.html'>Dinah Samuel</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Chenu, Charles</td>
+<td class='auteur' valign='top'>Chenu, Charles</td>
 <td class='livre'><a href='livres/000381/index.html'>De l’arrière à l’avant</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Christophe, Emmanuel</td>
+<td class='auteur' valign='top'>Christophe, Emmanuel</td>
 <td class='livre'><a href='livres/000300/index.html'>Souvenirs d’un vieux typographe</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Combette, Bernard</td>
+<td class='auteur' valign='top'>Combette, Bernard</td>
 <td class='livre'><a href='livres/000522/index.html'>L’isolement</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Coppée, François</td>
+<td class='auteur' valign='top'>Coppée, François</td>
 <td class='livre'><a href="livres/c00018/index.html">Œuvres complètes, édition Lemerre</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Courteline, Georges</td>
+<td class='auteur' valign='top'>Courteline, Georges</td>
 <td class='livre'><a href='livres/000203/index.html'>Les femmes d’amis</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Couvreur, André</td>
+<td class='auteur' valign='top'>Couvreur, André</td>
 <td class='livre'><a href='livres/000406/index.html'>La graine</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Crémieux, Benjamin</td>
+<td class='auteur' valign='top'>Crémieux, Benjamin</td>
 <td class='livre'><a href='livres/000398/index.html'>Le premier de la classe</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Dabit, Eugène</td>
+<td class='auteur' valign='top'>Dabit, Eugène</td>
 <td class='livre'><a href='livres/000448/index.html'>L’Hôtel du Nord</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Darwin, Charles</td>
+<td class='auteur' valign='top'>Darwin, Charles</td>
 <td class='livre'><a href='livres/000177/index.html'>Journal of Researches</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Daudet, Alphonse</td>
+<td class='auteur' valign='top'>Daudet, Alphonse</td>
 <td class='livre'><a href='livres/000141/index.html'>Lettres de mon moulin</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Décembre-Alonnier</td>
+<td class='auteur' valign='top'>Décembre-Alonnier</td>
 <td class='livre'><a href='livres/000382/index.html'>Typographes et gens de lettres</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Derème, Tristan</td>
+<td class='auteur' valign='top'>Derème, Tristan</td>
 <td class='livre'><a href='livres/000613/index.html'>Le laurier du Kaiser</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Derennes, Charles</td>
+<td class='auteur' valign='top'>Derennes, Charles</td>
 <td class='livre'><a href='livres/000392/index.html'>L’enfant dans l’herbe</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Duprat, François</td>
+<td class='auteur' valign='top'>Duprat, François</td>
 <td class='livre'><a href='livres/000380/index.html'>Histoire de l’Imprimerie impériale de France</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Elbel, Paul</td>
+<td class='auteur' valign='top'>Elbel, Paul</td>
 <td class='livre'><a href='livres/000578/index.html'>Pour une paix véritable</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Elder, Marc</td>
+<td class='auteur' valign='top'>Elder, Marc</td>
 <td class='livre'><a href='livres/000130/index.html'>Le Peuple de la Mer</a></td>
 </tr>
 
@@ -358,17 +358,17 @@
 </tr>
 
 <tr>
-<td class='auteur'>Faure, Sébastien</td>
+<td class='auteur' valign='top'>Faure, Sébastien</td>
 <td class='livre'><a href='livres/000376/index.html'>L’orateur populaire</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Flaubert, Gustave</td>
+<td class='auteur' valign='top'>Flaubert, Gustave</td>
 <td class='livre'><a href='livres/000152/index.html'>Madame Bovary - Mœurs de province</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Fourest, Georges</td>
+<td class='auteur' valign='top'>Fourest, Georges</td>
 <td class='livre'><a href='livres/000614/index.html'>Contes pour les satyres</a></td>
 </tr>
 
@@ -400,12 +400,12 @@
 
 
 <tr>
-<td class='auteur'>Gobineau, Arthur</td>
+<td class='auteur' valign='top'>Gobineau, Arthur</td>
 <td class='livre'><a href='livres/000001/index.html'>Les Pléiades</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Goldman, Emma</td>
+<td class='auteur' valign='top'>Goldman, Emma</td>
 <td class='livre'><a href='livres/000196/index.html'>Anarchism and other essays</a></td>
 </tr>
 
@@ -440,12 +440,12 @@
 </tr>
 
 <tr>
-<td class='auteur'>Janin, Jules</td>
+<td class='auteur' valign='top'>Janin, Jules</td>
 <td class='livre'><a href='livres/000384/index.html'>Un hiver à Paris</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Journet, Jean</td>
+<td class='auteur' valign='top'>Journet, Jean</td>
 <td class='livre'><a href='livres/000514/index.html'>L’ère de la femme</a></td>
 </tr>
 
@@ -459,17 +459,17 @@
 </tr>
 
 <tr>
-<td class='auteur'>Kropotkin, Petr Alekseevič</td>
+<td class='auteur' valign='top'>Kropotkin, Petr Alekseevič</td>
 <td class='livre'><a href='livres/000444/index.html'>La morale anarchiste</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Lafargue, Paul</td>
+<td class='auteur' valign='top'>Lafargue, Paul</td>
 <td class='livre'><a href='livres/000521/index.html'>Pamphlets socialistes</a> (Le Droit à la Paresse — La Religion du Capital — Un appétit venu — Pie IX au Paradis)</td>
 </tr>
 
 <tr>
-<td class='auteur'>Laforgue, Jules</td>
+<td class='auteur' valign='top'>Laforgue, Jules</td>
 <td class='livre'><a href='livres/000388/index.html'>Les complaintes</a></td>
 </tr>
 
@@ -553,7 +553,7 @@
 
 
 <tr>
-<td class='auteur'>Margueritte, Paul</td>
+<td class='auteur' valign='top'>Margueritte, Paul</td>
 <td class='livre'><a href='livres/000415/index.html'>Simple histoire</a></td>
 </tr>
 
@@ -567,33 +567,33 @@
 </tr>
 
 <tr>
-<td class='auteur'>Marx, Karl  et Engels, Frédéric</td>
+<td class='auteur' valign='top'>Marx, Karl  et Engels, Frédéric</td>
 <td class='livre'><a href='livres/000104/index.html'>Manifeste du Parti Communiste</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Maupassant, Guy de</td>
+<td class='auteur' valign='top'>Maupassant, Guy de</td>
 <td class='livre'><a href="livres/c00011/index.html">Œuvres complètes, Louis Conard</a></td>
 </tr>
 
 
 <tr>
-<td class='auteur'>Michel, Louise</td>
+<td class='auteur' valign='top'>Michel, Louise</td>
 <td class='livre'><a href='livres/000242/index.html'>Mémoires de Louise Michel écrits par elle-même</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Mille, Pierre</td>
+<td class='auteur' valign='top'>Mille, Pierre</td>
 <td class='livre'><a href='livres/000618/index.html'>Christine et lui</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Molière</td>
+<td class='auteur' valign='top'>Molière</td>
 <td class='livre'><a href="livres/c00016/index.html">Œuvres complètes, édition Félix Lemaistre</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Montesquieu</td>
+<td class='auteur' valign='top'>Montesquieu</td>
 <td class='livre'><a href='livres/c00002/index.html'>Œuvres complètes, édition Laboulaye</a></td>
 </tr>
 
@@ -607,12 +607,12 @@
 </tr>
 
 <tr>
-<td class='auteur'>Muller, Édouard</td>
+<td class='auteur' valign='top'>Muller, Édouard</td>
 <td class='livre'><a href='livres/000404/index.html'>Mon dernier combat</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Murger, Henry</td>
+<td class='auteur' valign='top'>Murger, Henry</td>
 <td class='livre'><a href='livres/000425/index.html'>Les buveurs d’eau</a></td>
 </tr>
 
@@ -678,22 +678,22 @@
 </tr>
 
 <tr>
-<td class='auteur'>Pellerin, Jean</td>
+<td class='auteur' valign='top'>Pellerin, Jean</td>
 <td class='livre'><a href='livres/000312/index.html'>La jeune fille aux pinceaux</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Pelloutier, Fernand</td>
+<td class='auteur' valign='top'>Pelloutier, Fernand</td>
 <td class='livre'><a href='livres/000620/index.html'>L’art et la révolte</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Philippe, Charles-Louis</td>
+<td class='auteur' valign='top'>Philippe, Charles-Louis</td>
 <td class='livre'><a href='livres/000314/index.html'>Bubu de Montparnasse</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Proudhon, Pierre-Joseph</td>
+<td class='auteur' valign='top'>Proudhon, Pierre-Joseph</td>
 <td class='livre'><a href='livres/000003/index.html'>Théorie de la propriété</a></td>
 </tr>
 
@@ -707,17 +707,17 @@
 </tr>
 
 <tr>
-<td class='auteur'>Rameau, Jean</td>
+<td class='auteur' valign='top'>Rameau, Jean</td>
 <td class='livre'><a href='livres/000375/index.html'>La vie et la mort</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Rebell, Hugues</td>
+<td class='auteur' valign='top'>Rebell, Hugues</td>
 <td class='livre'><a href='livres/000167/index.html'>Les Nuits chaudes du Cap français</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Reboul, Jules</td>
+<td class='auteur' valign='top'>Reboul, Jules</td>
 <td class='livre'><a href='livres/000321/index.html'>Le père Bacchus</a></td>
 </tr>
 
@@ -736,12 +736,12 @@
 </tr>
 
 <tr>
-<td class='auteur'>Renard, Jules</td>
+<td class='auteur valign='top''>Renard, Jules</td>
 <td class='livre'><a href='livres/000298/index.html'>L’écornifleur</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Robert, Louis de</td>
+<td class='auteur' valign='top'>Robert, Louis de</td>
 <td class='livre'><a href='livres/000289/index.html'>Papa</a></td>
 </tr>
 
@@ -759,7 +759,7 @@
 
 
 <tr>
-<td class='auteur'>Rostand, Edmond</td>
+<td class='auteur' valign='top'>Rostand, Edmond</td>
 <td class='livre'><a href='livres/000343/index.html'>Cyrano de Bergerac</a></td>
 </tr>
 
@@ -794,27 +794,27 @@
 </tr>
 
 <tr>
-<td class='auteur'>Savignon, André</td>
+<td class='auteur' valign='top'>Savignon, André</td>
 <td class='livre'><a href='livres/000440/index.html'>Filles de la pluie</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Schwob, Marcel</td>
+<td class='auteur' valign='top'>Schwob, Marcel</td>
 <td class='livre'><a href='livres/000163/index.html'>Le roi au masque d’or</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Sébillot, Paul</td>
+<td class='auteur' valign='top'>Sébillot, Paul</td>
 <td class='livre'><a href='livres/000335/index.html'>La République c’est la tranquillité</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Segalen, Victor</td>
+<td class='auteur' valign='top'>Segalen, Victor</td>
 <td class='livre'><a href='livres/000004/index.html'>Les immémoriaux</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Sorel, Georges</td>
+<td class='auteur' valign='top'>Sorel, Georges</td>
 <td class='livre'><a href='livres/000348/index.html'>Réflexions sur la violence</a></td>
 </tr>
 
@@ -841,7 +841,7 @@
 </tr>
 
 <tr>
-<td class='auteur'>Stirner, Max</td>
+<td class='auteur' valign='top'>Stirner, Max</td>
 <td class='livre'><a href='livres/000405/index.html'>L’unique et sa propriété</a></td>
 </tr>
 
@@ -855,37 +855,37 @@
 </tr>
 
 <tr>
-<td class='auteur'>Tarde, Gabriel</td>
+<td class='auteur' valign='top'>Tarde, Gabriel</td>
 <td class='livre'><a href='livres/000286/index.html'>Psychologie économique</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Theuriet, André</td>
+<td class='auteur' valign='top'>Theuriet, André</td>
 <td class='livre'><a href='livres/000432/index.html'>La fortune d’Angèle</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Tinan, Jean de</td>
+<td class='auteur' valign='top'>Tinan, Jean de</td>
 <td class='livre'><a href='livres/000455/index.html'>Érythrée</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Toulet, Paul-Jean</td>
+<td class='auteur' valign='top'>Toulet, Paul-Jean</td>
 <td class='livre'><a href='livres/000615/index.html'>Béhanzigue</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Trotsky, Léon</td>
+<td class='auteur' valign='top'>Trotsky, Léon</td>
 <td class='livre'><a href='livres/000293/index.html'>Où va la France ?</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Varlet, Théo</td>
+<td class='auteur' valign='top'>Varlet, Théo</td>
 <td class='livre'><a href='livres/000359/index.html'>Aux îles bienheureuses</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Verhaeren, Émile</td>
+<td class='auteur' valign='top'>Verhaeren, Émile</td>
 <td class='livre'><a href='livres/000149/index.html'>Les Flamandes</a></td>
 </tr>
 
@@ -899,12 +899,12 @@
 </tr>
 
 <tr>
-<td class='auteur'>Vigny, Alfred de</td>
+<td class='auteur' valign='top'>Vigny, Alfred de</td>
 <td class='livre'><a href='livres/000373/index.html'>Poésies</a></td>
 </tr>
 
 <tr>
-<td class='auteur'>Violeau, Hyppolyte</td>
+<td class='auteur' valign='top'>Violeau, Hyppolyte</td>
 <td class='livre'><a href='livres/000358/index.html'>Histoires de chez nous</a></td>
 </tr>
 
