000626  2019-12-23    Varinot — Un épisode de guerre tragi-comique

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -880,6 +880,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Varinot, Antonine</td>
+<td class='livre'><a href='livres/000626/index.html'>Un épisode de guerre tragi-comique</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Varlet, Théo</td>
 <td class='livre'><a href='livres/000359/index.html'>Aux îles bienheureuses</a></td>
 </tr>
