--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -469,8 +469,12 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Laforgue, Jules</td>
+<td class='auteur' valign='top' rowspan='2'>Laforgue, Jules</td>
 <td class='livre'><a href='livres/000388/index.html'>Les complaintes</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000627/index.html'>feuilles...</a></td>
 </tr>
 
 <tr>
