--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -325,6 +325,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Descaves, Lucien</td>
+<td class='livre'><a href='livres/000628/index.html'>Sous-offs</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Derennes, Charles</td>
 <td class='livre'><a href='livres/000392/index.html'>L’enfant dans l’herbe</a></td>
 </tr>
