--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -82,6 +82,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Andurain, Marga d’</td>
+<td class='livre'><a href="livres/000631/index.html">Le mari passeport</a></td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan="4" valign="top">Apollinaire, Guillaume</td>
 <td class='livre'><a href="livres/000364/index.html">Alcools</a></td>
 </tr>
@@ -174,7 +179,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='6' valign="top">Barbusse, Henri</td>
+<td class='auteur' rowspan='7' valign="top">Barbusse, Henri</td>
 <td class='livre'><a href='livres/000397/index.html'>Ce qui fut sera</a></td>
 </tr>
 
@@ -196,6 +201,10 @@
 
 <tr>
 <td class='livre'><a href='livres/000299/index.html'>Nous autres...</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000634/index.html'>Russie</a></td>
 </tr>
 
 
@@ -442,6 +451,23 @@
 
 <tr>
 <td class='livre'><a href='livres/000395/index.html'>Marthe</a></td>
+</tr>
+
+<tr>
+<td class='auteur' valign="top" rowspan='4'>Jaloux, Edmond</td>
+<td class='livre'><a href='livres/000632/index.html'>Au-dessus de la ville</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000633/index.html'>La constellation</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000629/index.html'>Le reste est silence</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000630/index.html'>Le roi Cophetua</a></td>
 </tr>
 
 <tr>
