More files for 000635 and 000636

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -324,6 +324,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Daumal, René</td>
+<td class='livre'><a href='livres/000636/index.html'>La guerre sainte</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Décembre-Alonnier</td>
 <td class='livre'><a href='livres/000382/index.html'>Typographes et gens de lettres</a></td>
 </tr>
@@ -735,6 +740,11 @@
 <tr>
 <td class='auteur' rowspan='2' valign='top'>Porché, François</td>
 <td class='livre'><a href='livres/000412/index.html'>A chaque jour</a></td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Prudhomme, Sully</td>
+<td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 
 <tr>
