--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -334,7 +334,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Derème, Tristan</td>
+<td class='auteur' valign='top' rowspan="2">Derème, Tristan</td>
+<td class='livre'><a href='livres/000637/index.html'>Érène</a></td>
+</tr>
+
+<tr>
 <td class='livre'><a href='livres/000613/index.html'>Le laurier du Kaiser</a></td>
 </tr>
 
