--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -747,8 +747,12 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='2' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000638/index.html'>Les épreuves</a></td>
 </tr>
 
 <tr>
