000640  2021-12-29    Prudhomme — Croquis italiens

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -747,7 +747,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='3' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='4' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -755,6 +755,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000639/index.html'>Les écuries d’Augias</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000640/index.html'>Croquis italiens</a></td>
 </tr>
 
 <tr>
