000641  2022-01-01    Jaloux — Les figures de cire

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -463,7 +463,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan='4'>Jaloux, Edmond</td>
+<td class='auteur' valign="top" rowspan='5'>Jaloux, Edmond</td>
 <td class='livre'><a href='livres/000632/index.html'>Au-dessus de la ville</a></td>
 </tr>
 
@@ -477,6 +477,10 @@
 
 <tr>
 <td class='livre'><a href='livres/000630/index.html'>Le roi Cophetua</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000641/index.html'>Les figures de cire</a></td>
 </tr>
 
 <tr>
