--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -405,6 +405,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign="top" rowspan="1">Gide, André</td>
+<td class='livre'><a href='livres/000642/index.html'>Isabelle</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top" rowspan="4">Gilbert de Voisins, Auguste</td>
 <td class='livre'><a href='livres/000619/index.html'>Écrit en Chine</a></td>
 </tr>
