000643  2022-01-07    Prudhomme — Les solitudes

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -756,7 +756,11 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='4' valign='top'>Prudhomme, Sully</td>
+<td class='livre'><a href='livres/000403/index.html'>Le poème de la tranchée</a></td>
+</tr>
+
+<tr>
+<td class='auteur' rowspan='5' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -768,9 +772,8 @@
 <tr>
 <td class='livre'><a href='livres/000640/index.html'>Croquis italiens</a></td>
 </tr>
-
 <tr>
-<td class='livre'><a href='livres/000403/index.html'>Le poème de la tranchée</a></td>
+<td class='livre'><a href='livres/000643/index.html'>Les solitudes</a></td>
 </tr>
 
 <tr>
