000644  2022-01-08    Prudhomme — Impressions de la guerre

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -760,7 +760,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='5' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='6' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -774,6 +774,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000643/index.html'>Les solitudes</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000644/index.html'>Impressions de la guerre</a></td>
 </tr>
 
 <tr>
