000645  2022-01-17    Gide — Souvenirs de Cour d’assises

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -405,8 +405,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan="1">Gide, André</td>
+<td class='auteur' valign="top" rowspan="2">Gide, André</td>
 <td class='livre'><a href='livres/000642/index.html'>Isabelle</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000645/index.html'>Souvenirs de la Cour d’assises</a></td>
 </tr>
 
 <tr>
