000646  2022-01-21    Jaloux — O toi que j’eusse aimée

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -471,7 +471,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan='5'>Jaloux, Edmond</td>
+<td class='auteur' valign="top" rowspan='6'>Jaloux, Edmond</td>
 <td class='livre'><a href='livres/000632/index.html'>Au-dessus de la ville</a></td>
 </tr>
 
@@ -489,6 +489,9 @@
 
 <tr>
 <td class='livre'><a href='livres/000641/index.html'>Les figures de cire</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000646/index.html'>O toi que j'eusse aimé</a></td>
 </tr>
 
 <tr>
