--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -949,8 +949,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Toulet, Paul-Jean</td>
+<td class='auteur' valign='top' rowspan='2'>Toulet, Paul-Jean</td>
 <td class='livre'><a href='livres/000615/index.html'>Béhanzigue</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000647/index.html'>Les demoiselles La Mortagne</a></td>
 </tr>
 
 <tr>
