000648  2022-01-25    Prudhomme — Les vaines tendresses

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -766,7 +766,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='6' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='7' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -783,6 +783,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000644/index.html'>Impressions de la guerre</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000648/index.html'>Les vaines tendresses</a></td>
 </tr>
 
 <tr>
