--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -766,7 +766,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='7' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='8' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -786,6 +786,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000648/index.html'>Les vaines tendresses</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000649/index.html'>La France</a></td>
 </tr>
 
 <tr>
