000651  2022-02-13    Prudhomme — Poésies diverses

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -760,13 +760,12 @@
 <td class='auteur' rowspan='2' valign='top'>Porché, François</td>
 <td class='livre'><a href='livres/000412/index.html'>A chaque jour</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000403/index.html'>Le poème de la tranchée</a></td>
 </tr>
 
 <tr>
-<td class='auteur' rowspan='8' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='10' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -789,6 +788,12 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000649/index.html'>La France</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000650/index.html'>La révolte des fleurs</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000651/index.html'>Poésies diverses</a></td>
 </tr>
 
 <tr>
