000652  2022-02-15    Prudhomme — Les destins

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -765,7 +765,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='10' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='11' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -794,6 +794,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000651/index.html'>Poésies diverses</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000652/index.html'>Les destins</a></td>
 </tr>
 
 <tr>
