000653  2022-02-20    Prudhomme — Le Zénith

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -765,7 +765,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='11' valign='top'>Prudhomme, Sully</td>
+<td class='auteur' rowspan='12' valign='top'>Prudhomme, Sully</td>
 <td class='livre'><a href='livres/000635/index.html'>Stances et poèmes</a></td>
 </tr>
 <tr>
@@ -797,6 +797,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000652/index.html'>Les destins</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000653/index.html'>Le Zénith</a></td>
 </tr>
 
 <tr>
