000654  2022-03-25    Toulet — Mon amie Nane

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -966,11 +966,14 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='2'>Toulet, Paul-Jean</td>
+<td class='auteur' valign='top' rowspan='3'>Toulet, Paul-Jean</td>
 <td class='livre'><a href='livres/000615/index.html'>Béhanzigue</a></td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000647/index.html'>Les demoiselles La Mortagne</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000654/index.html'>Mon amie Nane</a></td>
 </tr>
 
 <tr>
