000655  2022-04-02    Jaloux — L’Alcyone 000656  2022-05-09    Daumal — La grande beuverie

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -324,7 +324,10 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Daumal, René</td>
+<td class='auteur' valign='top' rowspan='2'>Daumal, René</td>
+<td class='livre'><a href='livres/000656/index.html'>La grande beuverie</a></td>
+</tr>
+<tr>
 <td class='livre'><a href='livres/000636/index.html'>La guerre sainte</a></td>
 </tr>
 
@@ -337,7 +340,6 @@
 <td class='auteur' valign='top' rowspan="2">Derème, Tristan</td>
 <td class='livre'><a href='livres/000637/index.html'>Érène</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000613/index.html'>Le laurier du Kaiser</a></td>
 </tr>
@@ -471,8 +473,12 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan='6'>Jaloux, Edmond</td>
+<td class='auteur' valign="top" rowspan='7'>Jaloux, Edmond</td>
 <td class='livre'><a href='livres/000632/index.html'>Au-dessus de la ville</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000655/index.html'>L’Alcyone</a></td>
 </tr>
 
 <tr>
