--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -17,9 +17,10 @@
 <p>&nbsp;</p>
 <p  style='text-align:center'><a href="#presentation">Présentation</a> — <a href="#catalogue">Catalogue</a> — <a href="#fidelite">Fidélité</a> — <a href="#fichier_source">Fichier source</a> — <a href="#formats">Formats des tirages</a> — <a href="#bien_commun">Bien commun</a></p>
 
-<p style='text-align:center'><a href="feed.xml"><img src="feed-icon-14x14.png" alt="Fil RSS"/> Nouveautés et mises à jour</a> — <a href="http://twitter.com/LivresEfele"><img src="twitter.png" alt="twitter"/> Twitter</a></p>
+<p style='text-align:center'><a href="feed.xml"><img src="feed-icon-14x14.png" alt="Fil RSS"/> Nouveautés et mises à jour</a></p>
 
 <p>&nbsp;</p>
+
 <h3><a name="presentation">Présentation</a></h3>
 <p>ÉFÉLÉ réimprime fidèlement, sous forme électronique, des textes du bien commun.</p>
 <ul>
