--- a/livres.publies/balzac/la_comedie_humaine/index.html
+++ b/livres.publies/balzac/la_comedie_humaine/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Honoré de Balzac : La comédie humaine"/>
-<meta name="twitter:description" content="Édition Furne. epub kindle daisy"/>
+<meta name="twitter:description" content="Édition Furne. epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00001/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -35,8 +35,6 @@
 
 <p>Archive de tous les volumes :
     <a href="la_comedie_humaine_epub.zip">epub</a> 
-    <a href="la_comedie_humaine_mobi.zip">kindle</a>
-    <a href="la_comedie_humaine_daisy.zip.zip">daisy</a> 
 </p>
 
 <p><a href="la_comedie_humaine_sources.zip">Source XML</a></p></div>
