--- a/livres.publies/barbara/histoires_emouvantes/index.html
+++ b/livres.publies/barbara/histoires_emouvantes/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Charles Barbara : Histoires émouvantes"/>
-<meta name="twitter:description" content="epub kindle daisy"/>
+<meta name="twitter:description" content="epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00009/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -38,13 +38,7 @@
 
 <p>Archive de tous les volumes :
     <a href="histoires_emouvantes_epub.zip">epub</a> 
-    <a href="histoires_emouvantes_mobi.zip">kindle</a>
-    <a href="histoires_emouvantes_daisy.zip.zip">daisy</a> 
 </p>
-
-<p><a href="histoires_emouvantes_sources.zip">Source XML</a></p></div>
-
-
 
 <table border="0" cellpadding="2">
 
