--- a/livres.publies/barbara/mes_petites_maisons/index.html
+++ b/livres.publies/barbara/mes_petites_maisons/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Charles Barbara : Mes petites-maisons"/>
-<meta name="twitter:description" content="epub kindle daisy"/>
+<meta name="twitter:description" content="epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00010/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -38,12 +38,7 @@
 
 <p>Archive de tous les volumes :
     <a href="mes_petites_maisons_epub.zip">epub</a> 
-    <a href="mes_petites_maisons_mobi.zip">kindle</a>
-    <a href="mes_petites_maisons_daisy.zip.zip">daisy</a> 
 </p>
-
-<p><a href="mes_petites_maisons_sources.zip">Source XML</a></p></div>
-
 
 
 <table border="0" cellpadding="2">
