--- a/livres.publies/loti/oeuvres_completes/index.html
+++ b/livres.publies/loti/oeuvres_completes/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Loti : Œuvres complètes"/>
-<meta name="twitter:description" content="Édition Calmann Lévy. epub kindle daisy"/>
+<meta name="twitter:description" content="Édition Calmann Lévy. epu"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00004/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -34,11 +34,7 @@
 
 <p>Archive de tous les volumes :
     <a href="loti_calmann_levy_epub.zip">epub</a> 
-    <a href="loti_calmann_levy_mobi.zip">kindle</a>
-    <a href="loti_calmann_levy_daisy.zip.zip">daisy</a> 
 </p>
-
-<p><a href="loti_calmann_levy_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
