--- a/livres.publies/verlaine/oeuvres_posthumes/index.html
+++ b/livres.publies/verlaine/oeuvres_posthumes/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Paul Verlaine : Œuvres posthumes"/>
-<meta name="twitter:description" content="Édition Albert Messein. epub kindle daisy"/>
+<meta name="twitter:description" content="Édition Albert Messein. epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00008/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -39,12 +39,7 @@
 
 <p>Archive de tous les volumes :
     <a href="verlaine_albert_messein_epub.zip">epub</a> 
-    <a href="verlaine_albert_messein_mobi.zip">kindle</a>
-    <a href="verlaine_albert_messein_daisy.zip.zip">daisy</a> 
 </p>
-
-<p><a href="verlaine_albert_messein_sources.zip">Source XML</a></p></div>
-
 
 
 <table border="0" cellpadding="2">
