--- a/livres.publies/verlaine/oeuvres_completes/index.html
+++ b/livres.publies/verlaine/oeuvres_completes/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
 <meta name="twitter:title" content="Paul Verlaine : Œuvres complètes"/>
-<meta name="twitter:description" content="Édition Léon Vanier. epub kindle daisy"/>
+<meta name="twitter:description" content="Édition Léon Vanier. epub"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00007/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
 
@@ -34,13 +34,7 @@
 
 <p>Archive de tous les volumes :
     <a href="verlaine_leon_vanier_epub.zip">epub</a> 
-    <a href="verlaine_leon_vanier_mobi.zip">kindle</a>
-    <a href="verlaine_leon_vanier_daisy.zip.zip">daisy</a> 
 </p>
-
-<p><a href="verlaine_leon_vanier_sources.zip">Source XML</a></p></div>
-
-
 
 <table border="0" cellpadding="2">
 
