--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -474,7 +474,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan='7'>Jaloux, Edmond</td>
+<td class='auteur' valign="top" rowspan='8'>Jaloux, Edmond</td>
 <td class='livre'><a href='livres/000632/index.html'>Au-dessus de la ville</a></td>
 </tr>
 
@@ -484,6 +484,10 @@
 
 <tr>
 <td class='livre'><a href='livres/000633/index.html'>La constellation</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000657/index.html'>L’égarée</a></td>
 </tr>
 
 <tr>
